cabal-version: 3.0

name: eexprs
version: 0.0.1.0
synopsis: I'm tired of writing parsers for programming languages
description: Please see the README on GitHub at <https://github.com/Zankoku-Okuno/eexprs#readme>
homepage: https://github.com/Zankoku-Okuno/eexprs#readme
bug-reports: https://github.com/Zankoku-Okuno/eexprs/issues
author: Okuno Zankoku
maintainer: zankoku.okuno@gmail.com
copyright: 2020 Okuno Zankoku
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/Zankoku-Okuno/eexprs

library
  exposed-modules:
    , Language.EExpr.Text.Lexer
    , Language.EExpr.Text.Lexer.Results
    , Language.EExpr.Text.Lexer.Stream
    , Language.EExpr.Text.Lexer.Types
    , Language.EExpr.Text.Parser
    , Language.EExpr.Text.PostLexer
    , Language.EExpr.Text.Render.SExpr
    , Language.EExpr.Types
  other-modules:
    , Paths_eexprs
    , Text.Lightyear
    , Text.Lightyear.Char
    , Text.Lightyear.Combinators
    , Text.Lightyear.Error
    , Text.Lightyear.Internal
    , Text.Lightyear.Position
    , Text.Lightyear.Stream
    , Text.Lightyear.String
  hs-source-dirs: src
  ghc-options: -Wall -Wunticked-promoted-constructors
  build-depends:
    , base >=4.7 && <5
    , bytestring >=0.10
    , containers >=0.6
    , fenster
    , text >=1.2 && <2
  default-language: Haskell2010

executable eexprs-devtest
  main-is: Main.hs
  other-modules:
      Paths_eexprs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  build-depends:
    , base >=4.7 && <5
    , bytestring >=0.10
    , containers >=0.6
    , eexprs
    , text >=1.2 && <2
  default-language: Haskell2010

test-suite test-correct
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  default-language: Haskell2010
  build-depends:
    , base
    , eexprs
    , tasty >=1.3
    , tasty-golden >=2.3
    , text
