cabal-version: 3.0
name: eexpr-bindings
version: 0.0.1.0
-- synopsis: 
-- description:
category: Data
homepage: https://github.com/Okuno Zankoku/eexpr-bindings
bug-reports: https://github.com/Okuno Zankoku/eexpr-bindings/issues
author: Okuno Zankoku
maintainer: zankoku.okuno@gmail.com
copyright: 2021 Okuno Zankoku
license: BSD-3-Clause
license-file: LICENSE
extra-source-files:
  , CHANGELOG.md
  , cbits/src/api/eexpr.h
  , cbits/src/internal/engine.h
  , cbits/src/internal/parameters.h
  , cbits/src/internal/types.h
  , cbits/src/shim/bigint.h
  , cbits/src/shim/common.h
  , cbits/src/shim/dllist.h
  , cbits/src/shim/dynarr.h
  , cbits/src/shim/strstuff.h

library
  hs-source-dirs: src
  exposed-modules:
    Data.Eexpr.Text
    Data.Eexpr.Text.Ffi
    Data.Eexpr.Text.Internal
  -- other-modules:
  build-depends:
    , base >=4.11.1
    , bytestring >=0.10
    , primitive >=0.7
    , eexpr-core
    , text-short >=0.1.3
  default-language: Haskell2010
  include-dirs:
    , cbits
    , cbits/src/api
    , cbits/src/internal
    , cbits/src/shim
  c-sources:
    , cbits/src/api/eexpr.c
    , cbits/src/internal/engine.c
    , cbits/src/internal/lexer.c
    , cbits/src/internal/parameters.c
    , cbits/src/internal/parser.c
    , cbits/src/internal/postlexer.c
    , cbits/src/internal/types.c
    , cbits/src/shim/bigint.c
    , cbits/src/shim/common.c
    , cbits/src/shim/dllist.c
    , cbits/src/shim/dynarr.c
    , cbits/src/shim/strstuff.c
  ghc-options: -Wall -O2

executable eexpr-delme
  hs-source-dirs: app
  main-is: Main.hs
  -- other-modules:
  build-depends:
    , base
    , bytestring >=0.10
    , text >=1.2
    , primitive >=0.7
    , eexpr-core
    , eexpr-bindings
    , text-short >=0.1.3
  default-language: Haskell2010
  ghc-options: -Wall -O2 -threaded

-- test-suite test
--   hs-source-dirs: test
--   main-is: Main.hs
--   type: exitcode-stdio-1.0
--   build-depends:
--     , eexpr-bindings
--     , base
--     -- , quickcheck-classes
--     -- , tasty
--     -- , tasty-hunit
--     -- , tasty-quickcheck
--   default-language: Haskell2010
--   ghc-options: -Wall -O2
