cabal-version: 3.0
name: eexpr-core
version: 0.0.1.0
-- synopsis: 
-- description:
category: Data
homepage: https://github.com/Okuno Zankoku/eexpr-core
bug-reports: https://github.com/Okuno Zankoku/eexpr-core/issues
author: Okuno Zankoku
maintainer: zankoku.okuno@gmail.com
copyright: 2021 Okuno Zankoku
license: BSD-3-Clause
license-file: LICENSE
extra-source-files: CHANGELOG.md

library
  hs-source-dirs: src
  exposed-modules:
    Data.Eexpr.Types
    Data.Eexpr.Text.Normal
    Data.List.NonEmpty2
  -- other-modules:
  build-depends:
    , base >=4.11.1
    , text >=1.2
    , text-short >=0.1.3
  default-language: Haskell2010
  ghc-options: -Wall -O2

test-suite test
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends:
    , eexpr-core
    , base
    -- , quickcheck-classes
    -- , tasty
    -- , tasty-hunit
    -- , tasty-quickcheck
  default-language: Haskell2010
  ghc-options: -Wall -O2
